--- a/Sources/BenchmarkSuiteExample/CMakeLists.txt
+++ b/Sources/BenchmarkSuiteExample/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(BenchmarkSuiteExample
   AddStringBenchmarks.swift
-  main.swift)
+  Suites.swift)
 target_link_libraries(BenchmarkSuiteExample PRIVATE
   Benchmark)
