--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(Benchmark)
 if(BUILD_EXAMPLES)
   add_subdirectory(BenchmarkMinimalExample)
   add_subdirectory(BenchmarkSuiteExample)
+  add_subdirectory(BenchmarkSuiteExampleMain)
 endif()
