Add BenchmarkState for lower overhead measurements
This change adds support for lower-overhead version of
writing explicit measurement loop within the benchmark
itself:

```swift
benchmark("my bench") { state in
    // set-up, not measured

    state.measure {
        // body of the benchmark, runs #iterations times
    }

    // tear-down, not measured
}
```

By using measure we get less overhead of measurements by around 10%:

```
    $ swift run -c release BenchmarkMinimalExample --min-time 10
    --max-iterations 100000000
    Updating https://github.com/apple/swift-argument-parser
    Resolving https://github.com/apple/swift-argument-parser at 0.0.6
    [4/4] Linking BenchmarkMinimalExample
    running noop... done! (6095.58 ms)
    running noop with state... done! (6215.35 ms)
    running measure noop... done! (5549.44 ms)

    name            time    std         iterations
    ----------------------------------------------
    noop            23.0 ns ±  83.88 %   100000000
    noop with state 23.0 ns ± 1473.15 %  100000000
    measure noop    21.0 ns ±  88.80 %   100000000
```

It is the same precision as if the clock is used directly in a tight
loop without any closures. To improve precision further we would need
to provide a higher precision clock then the one provided by
DispatchTime.

Fixes #29

--- a/Sources/Benchmark/CMakeLists.txt
+++ b/Sources/Benchmark/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(Benchmark
   BenchmarkResult.swift
   BenchmarkRunner.swift
   BenchmarkSetting.swift
+  BenchmarkState.swift
   BenchmarkSuite.swift
   MakeTests.swift
   Stats.swift)
