Prevent jobs from running twice on pull requests

--- a/.github/workflows/tests_mac.yaml
+++ b/.github/workflows/tests_mac.yaml
@@ -1,5 +1,9 @@
 name: tests-macos
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+
 jobs:
   macOS:
     name: macOS
