--- a/.github/workflows/tests_ubuntu.yaml
+++ b/.github/workflows/tests_ubuntu.yaml
@@ -1,5 +1,9 @@
 name: tests-ubuntu
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+
 jobs:
   ubuntu:
     name: Ubuntu 18.04
